--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ https://templatemo.com/tm-565-onix-digital
           <div class="inner-content">
             <div class="row">
               <div class="col-lg-10 offset-lg-1">
-                <h2>Know Your Website SEO Score by Email</h2>
+                <h2>Know Your Website SEO Score by ozkanzorlu@gmail.com</h2>
                 <form id="subscribe" action="" method="get">
                   <input type="text" name="website" id="website" placeholder="Your Website URL" required="">
                   <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">
